# ice-engine-tuner

./: .env  README.md  pyproject.toml
data/: mock_data.csv
models/: neural-network.py
scripts/: evaluate_model.py  export_CAN_tune.py  train_model.py
