[tool.poetry]
name = "ice-engine-tuner" 
version = "0.1.0"
description = "A project for CAN BUS data processing and tuning."
authors = ["Your Name <youremail@example.com>"]  # Replace with your name and email

[tool.poetry.dependencies]
python = "^3.8"  # Specify your Python version
pandas = "^1.3"  # Adjust version as needed
python-can = "^3.3"  # Adjust version as needed
tensorflow = "^2.6"  # If you're using TensorFlow, adjust version as needed

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"